[package]
name = "doom_the_dark_ages"
version = "0.1.0"
edition = "2021"

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = [ "derive" ] }
helpers = { path = "../helpers" }
paste = "1.0.15"
idtech = { path = "../idtech" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
