[package]
name = "doom_the_dark_ages"
version = "0.1.0"
edition = "2021"

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = ["derive"] }
bytemuck = "1.23.1"
helpers = { path = "../helpers" }
idtech = { path = "../idtech" }
once_cell = "1.19.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
