[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = [ "derive" ] }
paste = "1.0.15"

[lib]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
