[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

[features]
gba = ["asr/gba"]

[dependencies]
asr = { path = "../../asr", features = ["derive", "signature"] }
bytemuck = "1.23.1"
once_cell = "1.19.0"
paste = "1.0.15"

[lib]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
