[package]
name = "idtech"
version = "0.1.0"
edition = "2021"

[dependencies]
asr = { path = "../../asr", features = [
    # "alloc", # Working with allocations.
    # "derive", # Defining your own settings structs, converting endianness, and binding to .NET classes.
    # "flags", # Working with bit flags.
    # "float-vars", # Setting floating point variables.
    # "float-vars-small", # Setting floating point variables (small binary size).
    # "integer-vars", # Setting integer variables.
    "signature", # Scanning signatures.
    # "wasi-no-std", # Support for no_std on WASI.
] }
bitflags = "2.9.3"
helpers = { path = "../helpers" }

# Bytemuck can be used to define structs that are being read from the game's process.
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
once_cell = "1.19.0"
regex = "1.10.4"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0

